# token-group

./: Cargo.toml  README.md  pnpm-lock.yaml
.github/workflows/: main.yml  publish-rust.yml
clients/js-legacy/: package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json
interface/: Cargo.toml  README.md
interface/src/: error.rs  instruction.rs  lib.rs  state.rs
program/: Cargo.toml
program/src/: entrypoint.rs  processor.rs
program/tests/: initialize_group.rs  initialize_member.rs  setup.rs  update_group_authority.rs  update_group_max_size.rs
