[package]
name = "spl-token-group-interface"
version = "0.7.1"
description = "Solana Program Library Token Group Interface"
documentation = "https://docs.rs/spl-token-group-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.23.2"
num-derive = "0.4"
num_enum = "0.7"
num-traits = "0.2"
solana-instruction = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = "3.0.0"
spl-discriminator = "0.5.1"
spl-pod = "0.7.0"
thiserror = "2.0"

[dev-dependencies]
solana-sha256-hasher = "3.0.0"
spl-type-length-value = { version = "0.9.0", features = ["derive"] }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
