[package]
name = "spl-token-group-interface"
version = "0.7.2"
description = "Solana Program Library Token Group Interface"
documentation = "https://docs.rs/spl-token-group-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.23.2"
num-derive = "0.4"
num_enum = { version = "0.7", default-features = false }
num-traits = { version = "0.2", default-features = false }
solana-address = { version = "2.4.0", default-features = false, features = ["bytemuck", "nullable"] }
solana-instruction = { version = "3.3.0", default-features = false }
solana-nullable = { version = "1.0.0", features = ["bytemuck"] }
solana-program-error = { version = "3.0.1", default-features = false }
solana-zero-copy = { version = "1.0.0", features = ["bytemuck"] }
spl-discriminator = "0.5.1"
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
solana-sha256-hasher = "3.0.0"
spl-type-length-value = { version = "0.9.0", features = ["derive"] }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
