[package]
name = "spl-token-group-example"
version = "0.2.1"
description = "Solana Program Library Token Group Example"
documentation = "https://docs.rs/spl-token-group-example"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program-error = "2.2.2"
solana-program = "2.3.0"
solana-system-interface = "1"
spl-pod = "0.5.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-group-interface = { version = "0.6.0", path = "../interface" }
spl-type-length-value = "0.8.0"

[dev-dependencies]
solana-program-test = "2.3.4"
solana-sdk = "2.2.1"
spl-discriminator = "0.4.0"
spl-token-client = "0.16.1"
spl-token-metadata-interface = "0.7.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
