[package]
name = "spl-token-group-example"
version = "0.2.1"
description = "Solana Program Library Token Group Example"
documentation = "https://docs.rs/spl-token-group-example"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []

[dependencies]
solana-program-error = "3.0.1"
solana-program = "4.0.0"
solana-system-interface = "3"
spl-pod = "0.7.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-token-group-interface = { version = "0.7.0" }
spl-type-length-value = "0.9.1"

[dev-dependencies]
solana-program-test = { version = "3.1.8", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
spl-discriminator = "0.5.2"
spl-token-client = { version = "0.18.0", features = ["dev-context-only-utils"] }
spl-token-metadata-interface = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
